# Invigo

./: .env  .gitignore  1 - compile_and_upload_update.bat  2 - upload_update.bat  CHANGELOG.md  Invigo.spec  Job Process.eddx  LICENSE  README.md  about_dialog.py  add_item_dialog.py  build_invigo.ps1  changes_thread.py  compile_and_upload_update.py  compile_ui_files.py  compress.py  conver_component_orders.py  convert.py  convert_component_orders.py  convert_sheet_orders.py  decrypt_excel_files.py  download_thread.py  download_update.spec  dxftest.py  extract_maching_time_cut_length.py  grades.txt  input_dialog.py  inventory.json  invigo.prof  json_file.py  laser_quote_variables.cfg  license_dialog.py  license_menu.py  log_config.py  main.py  main.py.bak  material_id.json  message_dialog.py  price_of_steel_information.json  pyproject.toml  (+23 more)
.qt_for_python/rcc/: breeze.py
.qt_for_python/uic/: about.py  about_dialog.py  add_item_dialog.py  download.py  input_dialog.py  license.py  main.py  main_menu.py  message_dialog.py  select_item_dialog.py  web_scrape_results.py  web_scrape_results_dialog.py
config/: environments.py
data/: database.json
icons/: README.md  icon.pdn  loading.pdn
server/: .gitignore  Add Cutoff Sheet QR Code.docx  README.md  file_hosting.py  old_sever.py  order_number.json  run.bat  s  server.py  table_preview.html
server/data/: carpenter shop inventory.json  database.json  inventory - Parts in Inventory.json  inventory - Price of Steel.json  inventory.json  testt - Laser Parts List.json  testt - Parts in Inventory.json  testt - Price of Steel.json  testt.json
server/templates/: add_cutoff_sheet.html  index.html  inventories.html  inventory_table.html  sheet_template.html  sheet_template_read_only.html  view_qr_codes.html
server/utils/: __init__.py  colors.py  custom_print.py  files.py  generate_sheet_qr_codes.py  inventory_updater.py  json_file.py  send_email.py  sheet_report.py
settings/: settings.json
threads/: __init__.py  changes_thread.py  check_for_updates_thread.py  download_images_thread.py  download_quote_thread.py  download_thread.py  get_order_number_thread.py  get_previous_nests_data_thread.py  get_previous_nests_files_thread.py  get_saved_quotes_thread.py  job_loader_thread.py  job_sorter_thread.py  load_nests.py  remove_quantity.py  send_sheet_report_thread.py  set_order_number_thread.py  ui_threads.py  update_job_setting.py  upload_job_thread.py  upload_price_of_steel_information.py  upload_quoted_inventory.py  upload_thread.py  workspace_get_file_thread.py  workspace_upload_file_thread.py
ui/: README.md  about.ui  about_dialog.py  about_dialog.ui  about_dialog_ui.py  add_component_dialog.py  add_component_dialog.ui  add_item_dialog.py  add_item_dialog.ui  add_item_dialog_price_of_steel.py  add_item_dialog_price_of_steel.ui  add_item_dialog_price_of_steel_ui.py  add_item_dialog_ui.py  add_job_dialog.py  add_job_dialog.ui  add_laser_cut_part_dialog.py  add_sheet_dialog.py  add_sheet_dialog.ui  add_workspace_item.py  add_workspace_item.ui  assembly_widget.py  assembly_widget.ui  color_picker_dialog.py  color_picker_dialog.ui  components_tab.py  components_tab.ui  custom_widgets.py  dark_theme.css  dark_theme.css.bak  dark_theme.qss  dark_theme.qss.bak  edit_category_dialog.py  edit_category_dialog.ui  edit_paint_inventory.py  edit_statuses_dialog.py  edit_statuses_dialog.ui  edit_tags_dialog.py  edit_tags_dialog.ui  edit_workspace_settings.py  edit_workspace_settings.ui  (+80 more)
ui/BreezeStyleSheets/: breeze_resources.py
ui/custom/: job_tab.py  (+38 more)
utils/: __init__.py  calulations.py  colors.py  compress.py  dialog_buttons.py  dialog_icons.py  dxf.py  dxf_analyzer.py  excel_file.py  extract.py  file_changes.py  generate_quote.py  geometry.py  get_bend_hits.py  history_file.py  inventory_excel_file.py  ip_utils.py  json_file.py  json_object.py  message_icons.py  monday_excel_file.py  po.py  po_template.py  price_history_file.py  quote_excel_file.py  settings.py  sort_jobs.py  trusted_users.py  workspace.py
web_scrapers/: __init__.py  ebay_scraper.py  exchange_rate.py
website/: README.md  inventory - Parts in Inventory.json  inventory - Price of Steel.json  inventory.json  log.txt  requirements.txt  website.py
(+460 files in other folders)
