[project]
name = "Invigo"
version = "0.1.0"
description = "A state-of-the-art assembly-based Inventory Manager, designed to streamline the process of component tracking, quoting and management."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiotools",
    "altgraph",
    "ansi2html",
    "beautifulsoup4",
    "black",
    "blinker",
    "bs4",
    "certifi",
    "charset-normalizer",
    "click",
    "colorama",
    "coloredlogs",
    "colorlog",
    "colormap",
    "contourpy",
    "cycler",
    "debugpy",
    "distro",
    "easydev",
    "et-xmlfile",
    "Flask",
    "fonttools",
    "forex-python",
    "humanfriendly",
    "idna",
    "iniconfig",
    "isort",
    "itsdangerous",
    "Jinja2",
    "kiwisolver",
    "line-profiler",
    "Markdown",
    "markdown-it-py",
    "MarkupSafe",
    "matplotlib",
    "mdurl",
    "mpmath",
    "msgspec",
    "mypy",
    "mypy-extensions",
    "natsort",
    "numpy",
    "openpyxl",
    "packaging",
    "pandas",
    "pathspec",
    "pefile",
    "pexpect",
    "pillow",
    "platformdirs",
    "pluggy",
    "ptyprocess",
    "Pygments",
    "pyinstaller",
    "pyinstaller-hooks-contrib",
    "PyMuPDF",
    "PyMuPDFb",
    "pyparsing",
    "PyQt6",
    "PyQt6-Qt6",
    "PyQt6-sip",
    "PyQt6-WebEngine",
    "PyQt6-WebEngine-Qt6",
    "pyreadline3",
    "PySide6_Addons",
    "PySide6_Essentials",
    "pytest",
    "python-dateutil",
    "python-dotenv",
    "pytz",
    "QtAwesome",
    "QtPy",
    "QtRangeSlider",
    "requests",
    "rich",
    "ruff",
    "schedule",
    "setuptools",
    "shiboken6",
    "simplejson",
    "six",
    "soupsieve",
    "superqt",
    "sympy",
    "tabula-py",
    "tabulate",
    "tornado",
    "types-requests>=2.32.4.20250611",
    "typing_extensions",
    "tzdata",
    "ujson",
    "urllib3",
    "watchdog",
    "websocket-client",
    "Werkzeug",
    "XlsxWriter",
]
